fix: 强化道路短路径与端点连通性